objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Allow_Transfer__c</fullName>
        <formula>If( AND ( OR(text(Status) ==&apos;AQL&apos;, text(Status) ==&apos;MQL&apos;), !ISBLANK(FirstName), !ISBLANK(LastName), !ISBLANK(Email), !ISBLANK(Phone), !ISBLANK(Company), !ISBLANK(TEXT(Transferred_To__c))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Connect_Company_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, D&amp;B Connect populates this field that links the Lead record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, D&amp;B Connect populates this field that links the Lead record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</inlineHelpText>
        <label>D&amp;B Connect Company Profile</label>
        <referenceTo>DNBConnect__D_B_Connect_Company_Profile__c</referenceTo>
        <relationshipLabel>DBConnectLeadCompanyProfile</relationshipLabel>
        <relationshipName>DBConnectLeadCompanyProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Connect_Contact_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful Contact match, D&amp;B Connect populates this field that links the Lead record to a specific Contact ID for display of a custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful Contact match, D&amp;B Connect populates this field that links the Lead record to a specific Contact ID for display of a custom object with D&amp;B data.</inlineHelpText>
        <label>D&amp;B Connect Contact Profile</label>
        <referenceTo>DNBConnect__D_B_Connect_Contact_Profile__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Contact_Match_Driver__c</fullName>
        <description>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</description>
        <inlineHelpText>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</inlineHelpText>
        <label>D&amp;B Contact Match Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Confidence_Code__c</fullName>
        <description>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</description>
        <inlineHelpText>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</inlineHelpText>
        <label>D&amp;B Match Confidence Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Data_Profile__c</fullName>
        <description>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</description>
        <inlineHelpText>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</inlineHelpText>
        <label>D&amp;B Match Data Profile</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Grade__c</fullName>
        <description>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</description>
        <inlineHelpText>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</inlineHelpText>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Type__c</fullName>
        <description>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Name_Match_Score__c</fullName>
        <description>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Name Match Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__dunsTradedUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the D-U-N-S value on this record has been Traded Up. The D-U-N-S Trade Up feature enables D&amp;B Connect to enrich records with HQ location data directly into records matched at lower levels of the corporate family tree.</description>
        <inlineHelpText>This field indicates if the D-U-N-S value on this record has been Traded Up. The D-U-N-S Trade Up feature enables D&amp;B Connect to enrich records with HQ location data directly into records matched at lower levels of the corporate family tree.</inlineHelpText>
        <label>D-U-N-S Traded Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNBConnect__matchedDuns__c</fullName>
        <description>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</description>
        <inlineHelpText>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</inlineHelpText>
        <label>Matched D-U-N-S</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Company Enriched Only</fullName>
                </value>
                <value>
                    <fullName>Not Enriched - Not Under Management</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Scheduled Enrich</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Instant Enrich</fullName>
                </value>
                <value>
                    <fullName>Insufficient Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_Ns_Number__c</fullName>
        <externalId>true</externalId>
        <label>D-U-Ns Number</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>C-Level Executive</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>President/Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_AQL_Date__c</fullName>
        <label>AQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Sub_Type__c</fullName>
        <label>Account Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Account_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Life insurance</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Death insurance</fullName>
                </value>
                <value>
                    <fullName>General Insurance</fullName>
                </value>
                <value>
                    <fullName>Travel insurance</fullName>
                </value>
                <value>
                    <fullName>Benefit program</fullName>
                </value>
                <value>
                    <fullName>Sport Insurance</fullName>
                </value>
                <value>
                    <fullName>Card Insurance</fullName>
                </value>
                <value>
                    <fullName>Car Insurance</fullName>
                </value>
                <value>
                    <fullName>Dental Insurance</fullName>
                </value>
                <value>
                    <fullName>Home Insurance</fullName>
                </value>
                <value>
                    <fullName>Labor Insurance</fullName>
                </value>
                <value>
                    <fullName>Life and Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Personal Insurance</fullName>
                </value>
                <value>
                    <fullName>Broker/Consultant</fullName>
                    <isActive>false</isActive>
                    <label>Broker/Consultant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                    <isActive>false</isActive>
                    <label>Federal</label>
                </value>
                <value>
                    <fullName>Government</fullName>
                    <isActive>false</isActive>
                    <label>Government</label>
                </value>
                <value>
                    <fullName>Health System</fullName>
                    <isActive>false</isActive>
                    <label>Health System</label>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                    <isActive>false</isActive>
                    <label>Hospital</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Add_to_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This purpose of this field is to allow a lead record to be marked to be added to a nurture program. Marketo will watch for this field and when set to true auto-add to the nurture campaign.</description>
        <inlineHelpText>If checked, allows a lead record to be marked to be added to a Marketo nurture program.</inlineHelpText>
        <label>Add to Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Asset_URL__c</fullName>
        <description>Receives URL value from Marketo</description>
        <inlineHelpText>Receives URL value from Marketo</inlineHelpText>
        <label>Asset URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2O_Broker_Consultant_Type__c</fullName>
        <description>to choose Broker/Consultant Type</description>
        <label>Broker/Consultant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Client_Code__c</fullName>
        <label>Client Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Clinical_Interest__c</fullName>
        <label>Clinical Interests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Clinical_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Comments__c</fullName>
        <label>Next Steps/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Country_of_Service__c</fullName>
        <label>Country of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Country_of_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Date_Sales_Accepted__c</fullName>
        <label>SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Date_Sales_Qualified__c</fullName>
        <label>Date Sales Converted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_GCLID__c</fullName>
        <description>Used to capture Google ID from Marketo</description>
        <label>GCLID</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_How_Can_We_Help_You__c</fullName>
        <label>How Can We Help You?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiries</fullName>
                </value>
                <value>
                    <fullName>Physician Services</fullName>
                </value>
                <value>
                    <fullName>U.S. &amp; International Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Stroke Diagnostic Imaging</fullName>
                </value>
                <value>
                    <fullName>Media Relations</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Partnership &amp; Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Invoicing_Country__c</fullName>
        <label>Invoicing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Invoicing_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_IsBouncedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bounced Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Job_Function__c</fullName>
        <description>Lead&apos;s job function</description>
        <label>Job Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Other Practitioner</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                    <isActive>false</isActive>
                    <label>Associate</label>
                </value>
                <value>
                    <fullName>C-Level Executive</fullName>
                    <isActive>false</isActive>
                    <label>C-Level Executive</label>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                    <isActive>false</isActive>
                    <label>Coordinator</label>
                </value>
                <value>
                    <fullName>Director</fullName>
                    <isActive>false</isActive>
                    <label>Director</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <isActive>false</isActive>
                    <label>Manager</label>
                </value>
                <value>
                    <fullName>President/Vice President</fullName>
                    <isActive>false</isActive>
                    <label>President/Vice President</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Last_Lead_Status__c</fullName>
        <description>Lead Trigger updates the Last Status field when the Lead Status gets updated.</description>
        <inlineHelpText>Read only field to capture the Last Status of the Lead.</inlineHelpText>
        <label>Last Lead Status Prior Rejection</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Referral_Date__c</fullName>
        <label>Last Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Status_Date__c</fullName>
        <description>Lead Trigger Updates the field when the Lead Status is updated.</description>
        <inlineHelpText>The Date/Time when the current Lead Status was set. Read Only field.</inlineHelpText>
        <label>Last Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Status__c</fullName>
        <description>Lead Trigger updates the Last Status field when the Lead Status gets updated. Read Only field</description>
        <inlineHelpText>Read only field to capture the Last Status of the Lead.</inlineHelpText>
        <label>Last Status</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User object to select Lead Gen Rep who worked the Lead</description>
        <inlineHelpText>Select name of Lead Gen Rep who worked the Lead</inlineHelpText>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Source_Detail_Other__c</fullName>
        <label>Lead Source Detail – Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event - Sponsored</fullName>
                </value>
                <value>
                    <fullName>Paid - Display</fullName>
                </value>
                <value>
                    <fullName>Paid - Search</fullName>
                </value>
                <value>
                    <fullName>Paid - Social</fullName>
                </value>
                <value>
                    <fullName>Third Party Acquired</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar - Hosted</fullName>
                </value>
                <value>
                    <fullName>Webinar - Sponsored</fullName>
                </value>
                <value>
                    <fullName>Event - Hosted</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Referral Agent</fullName>
                </value>
                <value>
                    <fullName>AHIP Conference</fullName>
                </value>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>American Hospital Association</fullName>
                </value>
                <value>
                    <fullName>American Hospital Association Webinar</fullName>
                </value>
                <value>
                    <fullName>ATA</fullName>
                </value>
                <value>
                    <fullName>Becker&apos;s</fullName>
                </value>
                <value>
                    <fullName>Becker&apos;s Webinar</fullName>
                </value>
                <value>
                    <fullName>Blue National Summit</fullName>
                </value>
                <value>
                    <fullName>Blues Conference</fullName>
                </value>
                <value>
                    <fullName>Conference Board</fullName>
                </value>
                <value>
                    <fullName>EHBC Conference</fullName>
                </value>
                <value>
                    <fullName>Data.com (Jigsaw)</fullName>
                </value>
                <value>
                    <fullName>Employee-generated</fullName>
                </value>
                <value>
                    <fullName>Employer List 9.11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Lead_Status_Detail__c</fullName>
        <description>capturing lead status detail</description>
        <label>Lead Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Being Nurtured</fullName>
                </value>
                <value>
                    <fullName>Pending Sales Acceptance</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Attempting to Contact</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Activity Logged</fullName>
                </value>
                <value>
                    <fullName>Sales Nurture</fullName>
                </value>
                <value>
                    <fullName>Return to Nurture</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Lifecycle_Status__c</fullName>
        <description>Marketo&apos;s master tracking field for revenue cycle modeler</description>
        <label>Lifecycle Status</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_MQL_Date__c</fullName>
        <description>Date lead becomes MQL</description>
        <inlineHelpText>Date lead becomes MQL</inlineHelpText>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brokerage Firms - 51-100</fullName>
                </value>
                <value>
                    <fullName>Brokerage Firms - Top 50</fullName>
                </value>
                <value>
                    <fullName>Channel Partner / Reseller Referral</fullName>
                </value>
                <value>
                    <fullName>Mid-Market (1,000-4,999 employees)</fullName>
                </value>
                <value>
                    <fullName>National Account - Fortune 1000</fullName>
                </value>
                <value>
                    <fullName>National Account (&gt;=5,000 employees)</fullName>
                </value>
                <value>
                    <fullName>SMB (&lt;1,000 employees)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Marketo_Synch__c</fullName>
        <formula>If( FirstName = null, false,
If( LastName = null, false,
If( Company = null, false,
If( Title = null, false,
If( Email = null, false,
If( State = null, false,
If( Country = null, false, true)
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Microsoft_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Microsoft involvement. Field can be set manually but is also to be part of the lead conversion process.</description>
        <label>Microsoft Involved</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>